// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pagination disables first and previous links when current page == firstpage 1`] = `
<Pagination
  items={
    Array [
      Object {
        "id": 1,
        "recipeName": "Rice",
      },
      Object {
        "id": 5,
        "recipeName": "Beans",
      },
    ]
  }
  metadata={
    Object {
      "firstPage": 1,
      "itemsPerPage": 5,
      "lastPage": 3,
      "page": 1,
      "pages": Array [
        1,
        2,
        3,
      ],
      "totalCount": 13,
    }
  }
  onPageChange={[Function]}
>
  <div
    className="mt-5"
  >
    <nav
      aria-label="Page navigation"
    >
      <Pagination
        className="justify-content-center"
        tag="ul"
      >
        <ul
          className="justify-content-center pagination"
        >
          <PaginationItem
            className="disabled"
            tag="li"
          >
            <li
              className="disabled page-item"
            >
              <PaginationLink
                onClick={[Function]}
                tag="a"
              >
                <a
                  className="page-link"
                  onClick={[Function]}
                >
                  First
                </a>
              </PaginationLink>
            </li>
          </PaginationItem>
          <PaginationItem
            className="disabled"
            tag="li"
          >
            <li
              className="disabled page-item"
            >
              <PaginationLink
                onClick={[Function]}
                tag="a"
              >
                <a
                  className="page-link"
                  onClick={[Function]}
                >
                  <span
                    aria-hidden="true"
                  >
                    «
                  </span>
                  <span
                    className="sr-only"
                  >
                    Previous
                  </span>
                </a>
              </PaginationLink>
            </li>
          </PaginationItem>
          <PaginationItem
            className="active"
            key="1"
            tag="li"
          >
            <li
              className="active page-item"
            >
              <PaginationLink
                onClick={[Function]}
                tag="a"
              >
                <a
                  className="page-link"
                  onClick={[Function]}
                >
                  1
                </a>
              </PaginationLink>
            </li>
          </PaginationItem>
          <PaginationItem
            className=""
            key="2"
            tag="li"
          >
            <li
              className="page-item"
            >
              <PaginationLink
                onClick={[Function]}
                tag="a"
              >
                <a
                  className="page-link"
                  onClick={[Function]}
                >
                  2
                </a>
              </PaginationLink>
            </li>
          </PaginationItem>
          <PaginationItem
            className=""
            key="3"
            tag="li"
          >
            <li
              className="page-item"
            >
              <PaginationLink
                onClick={[Function]}
                tag="a"
              >
                <a
                  className="page-link"
                  onClick={[Function]}
                >
                  3
                </a>
              </PaginationLink>
            </li>
          </PaginationItem>
          <PaginationItem
            className=""
            tag="li"
          >
            <li
              className="page-item"
            >
              <PaginationLink
                onClick={[Function]}
                tag="a"
              >
                <a
                  className="page-link"
                  onClick={[Function]}
                >
                  <span
                    aria-hidden="true"
                  >
                    »
                  </span>
                  <span
                    className="sr-only"
                  >
                    Next
                  </span>
                </a>
              </PaginationLink>
            </li>
          </PaginationItem>
          <PaginationItem
            className=""
            tag="li"
          >
            <li
              className="page-item"
            >
              <PaginationLink
                onClick={[Function]}
                tag="a"
              >
                <a
                  className="page-link"
                  onClick={[Function]}
                >
                  Last
                </a>
              </PaginationLink>
            </li>
          </PaginationItem>
        </ul>
      </Pagination>
    </nav>
  </div>
</Pagination>
`;

exports[`Pagination disables first and previous links when current page == lastpage 1`] = `
<Pagination
  items={
    Array [
      Object {
        "id": 1,
        "recipeName": "Rice",
      },
      Object {
        "id": 5,
        "recipeName": "Beans",
      },
    ]
  }
  metadata={
    Object {
      "firstPage": 1,
      "itemsPerPage": 5,
      "lastPage": 3,
      "page": 3,
      "pages": Array [
        1,
        2,
        3,
      ],
      "totalCount": 13,
    }
  }
  onPageChange={[Function]}
>
  <div
    className="mt-5"
  >
    <nav
      aria-label="Page navigation"
    >
      <Pagination
        className="justify-content-center"
        tag="ul"
      >
        <ul
          className="justify-content-center pagination"
        >
          <PaginationItem
            className=""
            tag="li"
          >
            <li
              className="page-item"
            >
              <PaginationLink
                onClick={[Function]}
                tag="a"
              >
                <a
                  className="page-link"
                  onClick={[Function]}
                >
                  First
                </a>
              </PaginationLink>
            </li>
          </PaginationItem>
          <PaginationItem
            className=""
            tag="li"
          >
            <li
              className="page-item"
            >
              <PaginationLink
                onClick={[Function]}
                tag="a"
              >
                <a
                  className="page-link"
                  onClick={[Function]}
                >
                  <span
                    aria-hidden="true"
                  >
                    «
                  </span>
                  <span
                    className="sr-only"
                  >
                    Previous
                  </span>
                </a>
              </PaginationLink>
            </li>
          </PaginationItem>
          <PaginationItem
            className=""
            key="1"
            tag="li"
          >
            <li
              className="page-item"
            >
              <PaginationLink
                onClick={[Function]}
                tag="a"
              >
                <a
                  className="page-link"
                  onClick={[Function]}
                >
                  1
                </a>
              </PaginationLink>
            </li>
          </PaginationItem>
          <PaginationItem
            className=""
            key="2"
            tag="li"
          >
            <li
              className="page-item"
            >
              <PaginationLink
                onClick={[Function]}
                tag="a"
              >
                <a
                  className="page-link"
                  onClick={[Function]}
                >
                  2
                </a>
              </PaginationLink>
            </li>
          </PaginationItem>
          <PaginationItem
            className="active"
            key="3"
            tag="li"
          >
            <li
              className="active page-item"
            >
              <PaginationLink
                onClick={[Function]}
                tag="a"
              >
                <a
                  className="page-link"
                  onClick={[Function]}
                >
                  3
                </a>
              </PaginationLink>
            </li>
          </PaginationItem>
          <PaginationItem
            className="disabled"
            tag="li"
          >
            <li
              className="disabled page-item"
            >
              <PaginationLink
                onClick={[Function]}
                tag="a"
              >
                <a
                  className="page-link"
                  onClick={[Function]}
                >
                  <span
                    aria-hidden="true"
                  >
                    »
                  </span>
                  <span
                    className="sr-only"
                  >
                    Next
                  </span>
                </a>
              </PaginationLink>
            </li>
          </PaginationItem>
          <PaginationItem
            className="disabled"
            tag="li"
          >
            <li
              className="disabled page-item"
            >
              <PaginationLink
                onClick={[Function]}
                tag="a"
              >
                <a
                  className="page-link"
                  onClick={[Function]}
                >
                  Last
                </a>
              </PaginationLink>
            </li>
          </PaginationItem>
        </ul>
      </Pagination>
    </nav>
  </div>
</Pagination>
`;

exports[`Pagination renders correctly 1`] = `
<Pagination
  items={
    Array [
      Object {
        "id": 1,
        "recipeName": "Rice",
      },
      Object {
        "id": 5,
        "recipeName": "Beans",
      },
    ]
  }
  metadata={
    Object {
      "firstPage": 1,
      "itemsPerPage": 5,
      "lastPage": 3,
      "page": 2,
      "pages": Array [
        1,
        2,
        3,
      ],
      "totalCount": 13,
    }
  }
  onPageChange={[Function]}
>
  <div
    className="mt-5"
  >
    <nav
      aria-label="Page navigation"
    >
      <Pagination
        className="justify-content-center"
        tag="ul"
      >
        <ul
          className="justify-content-center pagination"
        >
          <PaginationItem
            className=""
            tag="li"
          >
            <li
              className="page-item"
            >
              <PaginationLink
                onClick={[Function]}
                tag="a"
              >
                <a
                  className="page-link"
                  onClick={[Function]}
                >
                  First
                </a>
              </PaginationLink>
            </li>
          </PaginationItem>
          <PaginationItem
            className=""
            tag="li"
          >
            <li
              className="page-item"
            >
              <PaginationLink
                onClick={[Function]}
                tag="a"
              >
                <a
                  className="page-link"
                  onClick={[Function]}
                >
                  <span
                    aria-hidden="true"
                  >
                    «
                  </span>
                  <span
                    className="sr-only"
                  >
                    Previous
                  </span>
                </a>
              </PaginationLink>
            </li>
          </PaginationItem>
          <PaginationItem
            className=""
            key="1"
            tag="li"
          >
            <li
              className="page-item"
            >
              <PaginationLink
                onClick={[Function]}
                tag="a"
              >
                <a
                  className="page-link"
                  onClick={[Function]}
                >
                  1
                </a>
              </PaginationLink>
            </li>
          </PaginationItem>
          <PaginationItem
            className="active"
            key="2"
            tag="li"
          >
            <li
              className="active page-item"
            >
              <PaginationLink
                onClick={[Function]}
                tag="a"
              >
                <a
                  className="page-link"
                  onClick={[Function]}
                >
                  2
                </a>
              </PaginationLink>
            </li>
          </PaginationItem>
          <PaginationItem
            className=""
            key="3"
            tag="li"
          >
            <li
              className="page-item"
            >
              <PaginationLink
                onClick={[Function]}
                tag="a"
              >
                <a
                  className="page-link"
                  onClick={[Function]}
                >
                  3
                </a>
              </PaginationLink>
            </li>
          </PaginationItem>
          <PaginationItem
            className=""
            tag="li"
          >
            <li
              className="page-item"
            >
              <PaginationLink
                onClick={[Function]}
                tag="a"
              >
                <a
                  className="page-link"
                  onClick={[Function]}
                >
                  <span
                    aria-hidden="true"
                  >
                    »
                  </span>
                  <span
                    className="sr-only"
                  >
                    Next
                  </span>
                </a>
              </PaginationLink>
            </li>
          </PaginationItem>
          <PaginationItem
            className=""
            tag="li"
          >
            <li
              className="page-item"
            >
              <PaginationLink
                onClick={[Function]}
                tag="a"
              >
                <a
                  className="page-link"
                  onClick={[Function]}
                >
                  Last
                </a>
              </PaginationLink>
            </li>
          </PaginationItem>
        </ul>
      </Pagination>
    </nav>
  </div>
</Pagination>
`;

exports[`Pagination renders correctly when there is only one page 1`] = `
<Pagination
  items={
    Array [
      Object {
        "id": 1,
        "recipeName": "Rice",
      },
      Object {
        "id": 5,
        "recipeName": "Beans",
      },
    ]
  }
  metadata={
    Object {
      "firstPage": 1,
      "itemsPerPage": 2,
      "lastPage": 1,
      "page": 1,
      "pages": Array [
        1,
      ],
      "totalCount": 2,
    }
  }
  onPageChange={[Function]}
/>
`;
